changed favicon, fixed double scrollbras in jobs table, prepared service.js for moving to production database in the future

--- a/css/app.css
+++ b/css/app.css
@@ -392,6 +392,7 @@ table.table-container {
   /*width: 100%;*/
   height: 100%;
   max-height: 450px; /*BSCHEER made height to max-height, new 100% height*/
+  overflow: visible;
 }
 
 .jobs-tab {
@@ -418,7 +419,7 @@ table.table-container {
 }
 
 .jobs-container, .app-sess-table1, .app-sess-table2, .session-list {
-  overflow-x: scroll;
+  overflow-x: visible;
   overflow-y: auto; /*BSCHEER CHANGE from scroll*/
   height: 100%;
 }
@@ -492,6 +493,7 @@ md-toolbar.dt-bar {
 
 .dt-container {
   margin-right: 2%;
+  overflow: auto; /*BSCHEER added*/
 }
 
 .datetimepick-fields {
